# tesseract-sys

./: Cargo.toml  build.rs
src/: lib.rs
