[package]
name = "tesseract-sys"
version = "0.5.7"
authors = [
    "Kevin Kwok <antimatter15@gmail.com>",
    "Chris Couzens <ccouzens@gmail.com>",
    "Jung-kwang Lee <ntoskrnl7@gmail.com>",
]
description = "Rust Bindings for Tesseract OCR"
license = "MIT"
edition = '2018'
repository = "https://github.com/ccouzens/tesseract-sys"
keywords = ["OCR", "tesseract"]
categories = ["external-ffi-bindings", "multimedia::images"]
links = "tesseract"
build = "build.rs"

[dependencies]
leptonica-sys = { git = "https://github.com/ntoskrnl7/leptonica-sys" }

[build-dependencies]
bindgen = "0.59.1"
[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.8"
[target.'cfg(not(windows))'.build-dependencies]
pkg-config = "0.3.19"

[features]
default = []
enable-static = ["leptonica-sys/enable-static"]
